SFDCInvoice/Project_Expenses/src/objects/Expan__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expance__c</referenceTo>
        <relationshipLabel>Expense-Member-Details</relationshipLabel>
        <relationshipName>Expense_Member_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expense-Member-Details</relationshipLabel>
        <relationshipName>Expense_Member_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>money_contributed__c</fullName>
        <label>money contributed</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Expense-Member-Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>exp-mem-{0000000}</displayFormat>
        <label>Expan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense-Member-Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>